Wed Mar 31 15:26:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Servant_Activator.cpp:
          Small changes to debug statements to get consistent logging

        * ciao/Servants/Servant_Impl_T.cpp:
          Log a message when we can't set the session context

Wed Mar 31 13:49:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL3_Plus/KitechSink.idl:

          Added full definition of eventtype that recently had 2 forward
          declarations uncommented. Missing full definition was causing
          'unresolved' link errors.

Wed Mar 31 13:37:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/NDDS_Latency_Sender.cpp:
          Use take instead of take_next_sample

Wed Mar 31 09:45:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/NodeManager/Node_Manager.cpp:
        * DAnCE/NodeManager/NodeManager.mpc:
          Added CIAO logger initialization to be able to see logging
          from reused CIAO components (like Server activator).

Wed Mar 31 09:38:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/TargetManager/TargetManager.mpc:
          Fix for link error in static build.

Wed Mar 31 07:51:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.cpp:
          Fixed incorrect types with qsort

Tue Mar 30 19:26:54 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:

          Uncommented multiple forward declared eventtype case,
          problem has been fixed.

Tue Mar 30 10:31:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * tools/Completion/CompletionHandler_T.h: